kuber-manifests/4_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-operation-service-deployment
  namespace: kolybelkin
spec:
  replicas: 3
  selector:
    matchLabels:
      app: user-operation-service
  template:
    metadata:
      labels:
        app: user-operation-service
    spec:
      containers:
        - name: user-operation-service
          image: kolybelkin/user-operation-service:latest
          ports:
            - name: web
              containerPort: 8080
          readinessProbe:
            tcpSocket:
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 10
          volumeMounts:
            - name: application-config
              mountPath: "/deployments/config"
              readOnly: true
      volumes:
        - name: application-config
          configMap:
            name: user-operation-service-config
            items:
              - key: application.properties
                path: application.properties
