kuber-manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kolybelkin-app-deployment
  namespace: kolybelkin
spec:
  replicas: 3
  selector:
    matchLabels:
      app: kolybelkin-app
  template:
    metadata:
      labels:
        app: kolybelkin-app
    spec:
      containers:
        - name: kolybelkin-app
          image: kolybelkin/kuber-app-1:latest
          ports:
            - name: web
              containerPort: 8080
          readinessProbe:
            tcpSocket:
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 3
