kuber-manifests/4_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: user-operation-service-service
  namespace: kolybelkin
spec:
  selector:
    app: user-operation-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: web
